# brackeys_25

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/CesiumMan/: README.md
assets/WaterBottle/: README.md
assets/barrel/: barrel.gltf
assets/hexGrass/: hex_grass.gltf  hex_grass_bottom.gltf
assets/mountains/: mountain_A.gltf  mountain_A_grass.gltf  mountain_A_grass_trees.gltf  mountain_B.gltf  mountain_B_grass.gltf  mountain_B_grass_trees.gltf  mountain_C.gltf  mountain_C_grass.gltf  mountain_C_grass_trees.gltf
include/: debug.h  draw.h  gltf.h  material.h  mesh.h  model.h  renderer.h  shader.h  skin.h  std140.h  texture.h
include/collections/: map_vector.h  pin_ref.h  slot_map.h  static.h  unique_list.h
include/collections/slot_map/: handle_map.h  static.h
include/collections/unique_list/: vector_list.h
include/graphics/: debug.h  renderer.h
include/graphics/assets/: bundle.h  gltf.h  model.h
include/graphics/resources/: animation.h  material.h  mesh.h  model.h  shader.h  skin.h  texture.h
include/graphics/resources/animation/: joint.h
include/graphics/resources/gl/: bundle.h  draw.h  instance.h  material.h  mesh.h  model.h  shader.h  texture.h  vertex_array.h
include/graphics/resources/gl/buffer/: std140.h
include/graphics/storage/: animation.h  material.h  mesh.h  texture.h
include/graphics/storage/gl/: bundle.h  instance.h  material.h  mesh.h
shaders/colored/: shader.frag  shader.vert
shaders/dynamic/colored/: shader.vert
shaders/dynamic/unlit/: shader.vert
shaders/unlit/: shader.frag  shader.vert
shaders/unlit_animated/: shader.vert
src/: main.cpp  mesh.cpp  texture.cpp
src/EntityComponentSystem/: ECS.cpp  ECS.hpp
src/EntityComponentSystem/Components/: BulletComponent.hpp  CoinComponent.hpp  CollidingComponent.hpp  ComponentIndexes.hpp  FollowPlayerComponent.hpp  HitBoxComponent.hpp  MovableComponent.hpp  PlayerMovementComponent.hpp  PositionComponent.hpp  RemoveComponent.hpp  RenderableComponent.hpp
src/EntityComponentSystem/Storage/: ComponentStorage.hpp  EntityStorage.hpp  QueryBuilder.hpp
src/EntityComponentSystem/Systems/: BulletSystem.hpp  CollidingSystem.hpp  CollisionResolutionSystem.hpp  FollowingPlayerSystem.hpp  MovementSystem.hpp  ParallelCollidingSystem.hpp  PlayerMovementSystem.hpp  QuadTree.hpp  RemoveEntitySystem.hpp  RenderingSystem.hpp
src/ImGui/: ImGui.cpp  ImGui.hpp
src/InputHandler/: InputHandler.cpp  InputHandler.hpp
src/MusicManager/: MusicManager.cpp  MusicManager.hpp
tests/: main.cpp  test_ecs.cpp
